# reputils

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  LICENSEMIT.md  Makefile  README.md  TODO.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: blacknmypy.yml  buildmultiarchandpush.yml  checkblack.yml  mypynpytests.yml  pytests.yml
reputils/: MailReport.py  __init__.py
scripts/: loguru_skiplog_config_example.py  update_badge.py
