[build-system]
# Metadata-Version: 2.3
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.sources]
#"reputils" = "reputils"

[tool.hatch.build]
# ignore-vcs = true
#only-packages = true
packages = ["reputils"]
#packages = ["reputils", "tests"]
#artifacts = [
#  "pytest.ini",
#  ".mypy.ini"
#]
#include = [
#    "pytest.ini",
#    ".mypy.ini",
#]
#exclude = [
#  ".gitignore"
#]

[project]
name = "reputils"
version = "0.0.15"
authors = [
  { name="Henning Thieß", email="ht@xomox.cc" },
]
description = "REPUTILS"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'loguru>=0.7.3',
    'pytz>=2025.2',
    'python-dateutil==2.9.*'
]

#[project.optional-dependencies]
#tests = [
#    'pytest==7.1.3'
#]

[project.urls]
"Homepage" = "https://github.com/vroomfondel/reputils"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

